kube/finder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finder-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: finder
  template:
    metadata:
      labels:
        component: finder
    spec:
      containers:
        - name: finder
          image: mikebychkov/sb-finder:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
      serviceAccountName: config-reader
