kube/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: posts
  template:
    metadata:
      labels:
        component: posts
    spec:
      containers:
        - name: posts
          image: mikebychkov/sb-posts:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
