kube/finder-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: finder-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: finder
  ports:
    - port: 5002
      targetPort: 5002
