kube/posts-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: posts
  ports:
    - port: 5001
      targetPort: 5001
